Preventing the creation of ambiguous command in GuiUtils.OpenFolder